[package]
name = "bitex"
version = "0.1.0"
authors = ["Nubis <yo@nubis.im>"]
description = "Bitex API client in rust"
repository = "https://github.com/bitex-la/rust-bitex"
keywords = ["bitex", "bitcoin", "exchange", "payments"]
license = "WTFPL"

[dependencies]
curs = { version = "^0.1.2", git = "https://github.com/bitex-la/rust-curs.git", branch = "serde_with_decimal" }
serde_macros = { version = "^0.8.0", git = "https://github.com/nubis/serde.git" }
serde = { version = "^0.8.0", git = "https://github.com/nubis/serde.git" }
mime_guess = "=1.4.0"

[dev-dependencies]
http_stub = "0.1.2"
