[package]
name = "bitex"
version = "0.1.1"
authors = ["Nubis <yo@nubis.im>"]
description = "Bitex API client in rust"
repository = "https://github.com/bitex-la/rust-bitex"
keywords = ["bitex", "bitcoin", "exchange", "payments"]
license = "WTFPL"

[dependencies]
curs = { version = "^0.1.3" }
serde_macros = { version = "^0.8.3" }
serde = { version = "^0.8.0" }
mime_guess = "=1.4.0"

[dev-dependencies]
http_stub = "0.1.2"
